--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
+  "type": "module",
   "name": "fcc-exercise-tracker",
   "version": "0.1.0",
   "description": "A REST API project, part of Free Code Camp's curriculum",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon --exec babel-node ./server.js"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -26,5 +27,17 @@
     "node",
     "gomix",
     "express"
-  ]
+  ],
+  "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/node": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "nodemon": "^2.0.2"
+  }
 }
