--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "A REST API project, part of Free Code Camp's curriculum",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon --exec babel-node ./server.js"
+    "start": "nodemon --exec  babel-node --require dotenv/config ./server.js"
   },
   "dependencies": {
     "express": "^4.17.1",
