--- a/package.json
+++ b/package.json
@@ -1,43 +1,45 @@
 {
   "type": "module",
-  "name": "fcc-exercise-tracker",
+  "name": "exercise-tracker",
   "version": "0.1.0",
   "description": "A REST API project, part of Free Code Camp's curriculum",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon --exec  babel-node --require dotenv/config ./server.js"
+    "build": "tsc",
+    "prod": "yarn build && node ./dist/server.js",
+    "start": "nodemon"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^5.8.10",
-    "mongodb": "^3.5.2",
-    "cors": "^2.8.5",
     "body-parser": "^1.19.0",
-    "shortid": "^2.2.15",
-    "dotenv": "^6.1.0"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "module-alias": "^2.2.2",
+    "mongoose": "^5.9.10"
   },
   "engines": {
-    "node": "6.9.1"
+    "node": "8.10.0"
   },
   "repository": {
-    "url": "https://gomix.com/#!/project/welcome-project"
+    "url": ""
   },
   "license": "MIT",
   "keywords": [
     "node",
-    "gomix",
-    "express"
+    "express",
+    "typescript"
   ],
+  "_moduleAliases": {
+    "@root": "src",
+    "@utils": "utils"
+  },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/node": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "nodemon": "^2.0.2"
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.6",
+    "@types/mongoose": "^5.7.14",
+    "@types/node": "^13.13.4",
+    "nodemon": "^2.0.2",
+    "ts-node": "^8.9.1",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^3.8.3"
   }
 }
